--- a/views/index.html
+++ b/views/index.html
@@ -1,2 +1,6 @@
-<h1>Trivia Demo App</h1>
-<p>Hello GitHub</p>
+{% extends "layout.html" %}
+
+{% block main %}
+	<h1>Trivia Demo App</h1>
+	<p>Hello GitHubb</p>
+{% endblock %}
