--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
 <div class="starter-template">
 	<h1>Welcome to FCC Trivia!</h1>
 	<p>We are a simple Question/Answer Trivia game.</p>
-	<p>We are a open source <a href="https://github.com/DusanSacha/fcctrivia" target="_blank">GitHub based project</a> for all Javascript learners. Everybody is welcome to contrubute!</p>
+	<p>We are a open source <a href="https://github.com/DusanSacha/fcctrivia" target="_blank">GitHub based project</a> for all JavaScript learners. Everybody is welcome to contribute!</p>
 	<h2>Let's start and <a href="/play">play</a>!</h2>
-	<h2>...or let's start and do some javascript!</h2>
+	<h2>...or let's start and do some JavaScript!</h2>
 	<p>If you are new here and would like to contribute, please check our GitHub <a href="https://github.com/DusanSacha/fcctrivia/blob/master/README.md">README.md file</a> for more information. You can also check <a href="https://github.com/DusanSacha/fcctrivia/issues">Issues</a> and find an bug or new feature you would like to work on. If you found a bug or have another suggestion, don't hesitate to <a href="https://github.com/DusanSacha/fcctrivia/issues/new">create a new issue</a> on GitHub with your description.</p>
 	<h2>Let's turn this app together into a real thing!</h2>
 </div>	
